# makepad_image_loader

./: Cargo.toml
packaging/: Info.plist  img_loader.desktop
src/: app.rs  lib.rs  main.rs
